--- a/makegen.cabal
+++ b/makegen.cabal
@@ -25,6 +25,9 @@ source-repository head
 library
   hs-source-dirs:      src
   exposed-modules:     Makegen
+                       Makegen.Internal.Digest
+                       Makegen.Internal.Joined
+                       Makegen.Internal.Stable
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , containers
@@ -42,5 +45,8 @@ test-suite makegen-test
   main-is:             Main.hs
   build-depends:       base
                      , makegen
+                     , containers
+                     , hspec
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
